Comprehensive UI improvements and Oblique framework setup
- Add API proxy configuration for backend communication (port 8080)
- Fix Jobs page: conditional spinner, backend availability indicator
- Fix Data Sources: proper file upload with preview
- Fix Settings: auto-save with debouncing, immediate theme application
- Improve SHACL Studio: template library, plain language constraints
- Add Oblique framework dependencies and Swiss Federal styling
- Update color scheme to align with Swiss Government design system

--- a/rdf-forge/rdf-forge-ui/angular.json
+++ b/rdf-forge/rdf-forge-ui/angular.json
@@ -31,6 +31,8 @@
               }
             ],
             "styles": [
+              "node_modules/@oblique/oblique/styles/scss/oblique-core.scss",
+              "node_modules/@oblique/oblique/styles/scss/oblique-material.scss",
               "src/styles.scss"
             ]
           },
@@ -110,6 +112,10 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "allowedHosts": ["all", "host.docker.internal", ".localhost"],
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "buildTarget": "rdf-forge-ui:build:production"
