--- a/rdf-forge/rdf-forge-ui/package.json
+++ b/rdf-forge/rdf-forge-ui/package.json
@@ -30,8 +30,10 @@
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
+    "@angular/material": "^21.0.1",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@oblique/oblique": "^13.2.3",
     "keycloak-js": "^26.2.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
