Add Personal Access Token (PAT) authentication support
Backend:
- Add PersonalAccessToken model to common module with expiration options (1 week to never)
- Create rdf-forge-auth-service module with:
  - JPA entity and repository for PAT storage
  - Service for token creation, validation, and revocation
  - REST API endpoints for PAT management
  - Flyway migration for database schema
- Add PAT authentication filter to gateway for Bearer token validation
- Add auth service route to gateway configuration

Frontend:
- Add PAT management section to Settings > Users & Permissions tab
- Allow users to generate new tokens with custom names and expiration
- Display token list with creation date, expiration status, and last usage
- Show token only once after creation with copy functionality
- Support token revocation with confirmation

--- a/rdf-forge/pom.xml
+++ b/rdf-forge/pom.xml
@@ -21,6 +21,7 @@
         <module>rdf-forge-data-service</module>
         <module>rdf-forge-dimension-service</module>
         <module>rdf-forge-triplestore-service</module>
+        <module>rdf-forge-auth-service</module>
         <module>rdf-forge-gateway</module>
         <module>rdf-forge-cli</module>
     </modules>
