--- a/rdf-forge/rdf-forge-gateway/pom.xml
+++ b/rdf-forge/rdf-forge-gateway/pom.xml
@@ -45,6 +45,11 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
