Add modular provider architecture for extensibility
Implement plugin-based registries for triplestores, data formats, and storage:

Triplestore Provider Registry:
- TriplestoreProvider interface for connector implementations
- TriplestoreProviderInfo record for provider metadata
- TriplestoreProviderRegistry for auto-discovery
- AbstractSparqlConnector base class for common SPARQL operations
- Concrete providers: GraphDBProvider, StardogProvider, FusekiProvider
- REST API endpoints: GET /triplestores/providers

Data Format Registry:
- DataFormatHandler interface for format parsers
- DataFormatInfo record with options and capabilities
- DataFormatRegistry for auto-discovery
- Format handlers: CsvFormatHandler, JsonFormatHandler, ExcelFormatHandler, RdfFormatHandler
- REST API endpoints: GET /data/formats

Storage Provider Registry:
- StorageProvider interface for cloud storage operations
- StorageProviderInfo record with config fields
- StorageProviderRegistry for auto-discovery
- Storage providers: MinioStorageProvider, AwsS3StorageProvider, AzureBlobStorageProvider, GcsStorageProvider, LocalStorageProvider
- REST API endpoints: GET /data/storage/providers

Dependencies added:
- Apache POI for Excel support
- OpenCSV for CSV parsing
- AWS SDK v2 for S3
- Azure Storage Blob SDK
- Google Cloud Storage SDK

All registries use Spring component scanning for automatic provider discovery.
Adding a new provider only requires creating a new @Component class.

--- a/rdf-forge/pom.xml
+++ b/rdf-forge/pom.xml
@@ -41,6 +41,11 @@
         <lombok.version>1.18.32</lombok.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <flyway.version>10.10.0</flyway.version>
+        <poi.version>5.2.5</poi.version>
+        <opencsv.version>5.9</opencsv.version>
+        <aws-sdk.version>2.25.16</aws-sdk.version>
+        <azure-storage.version>12.25.2</azure-storage.version>
+        <gcs.version>2.36.0</gcs.version>
     </properties>
 
     <dependencyManagement>
@@ -146,6 +151,51 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct.version}</version>
+            </dependency>
+
+            <!-- Apache POI for Excel -->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+
+            <!-- OpenCSV for CSV parsing -->
+            <dependency>
+                <groupId>com.opencsv</groupId>
+                <artifactId>opencsv</artifactId>
+                <version>${opencsv.version}</version>
+            </dependency>
+
+            <!-- AWS SDK v2 for S3 -->
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>s3</artifactId>
+                <version>${aws-sdk.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>s3-transfer-manager</artifactId>
+                <version>${aws-sdk.version}</version>
+            </dependency>
+
+            <!-- Azure Blob Storage -->
+            <dependency>
+                <groupId>com.azure</groupId>
+                <artifactId>azure-storage-blob</artifactId>
+                <version>${azure-storage.version}</version>
+            </dependency>
+
+            <!-- Google Cloud Storage -->
+            <dependency>
+                <groupId>com.google.cloud</groupId>
+                <artifactId>google-cloud-storage</artifactId>
+                <version>${gcs.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
