Add comprehensive platform improvements and K8s simulation
This commit includes multiple major enhancements:

Settings System:
- Add global SettingsService with signal-based state management
- Create HTTP timeout interceptor for configurable request timeouts
- Integrate settings into ApiService and TriplestoreService
- Refactor Settings component to use centralized service

Testing Infrastructure:
- Set up Playwright E2E testing with navigation, cube creation,
  pipeline designer, settings, and data upload tests
- Enhance GitHub Actions CI/CD workflow with test coverage
- Add backend test workflow for Maven-based testing

Admin Panel:
- Create admin routes with role-based access guard
- Add user management component (Keycloak read-only)
- Add role management component
- Add token management component (PAT CRUD)
- Add system settings component
- Create AdminController with KeycloakReadOnlyClient

GitOps Configuration Sync:
- Add GitProvider enum and GitSyncConfig models
- Create GitHub and GitLab API clients for file operations
- Add GitSyncService with push/pull/auto-sync capabilities
- Create ConfigExportService for pipeline/shape exports
- Add GitSyncController REST endpoints
- Create frontend GitSyncService and UI component

GitLab CI/CD Integration:
- Add GitLabDestinationProvider for RDF publishing to GitLab
- Support pipeline triggering with wait-for-completion option
- Add ci-cd category to destination providers

Cube Creator Improvements:
- Enhance column mapping with card-based UI
- Add bulk actions for quick role assignment
- Add sample data preview per column
- Improve visual role indicators and URI preview

Kubernetes Simulation:
- Create docker-compose.k8s-simulation.yml with Traefik ingress
- Add Docker secrets, ConfigMaps, and resource limits
- Include Prometheus and Grafana for observability
- Support service replicas for scaling simulation

Feature Parity Analysis:
- Document comparison with cube-creator, cube-link, and barnard59
- Identify gaps and

--- a/rdf-forge/rdf-forge-ui/angular.json
+++ b/rdf-forge/rdf-forge-ui/angular.json
@@ -31,8 +31,9 @@
               }
             ],
             "styles": [
-              "node_modules/@oblique/oblique/styles/scss/oblique-core.scss",
-              "node_modules/@oblique/oblique/styles/scss/oblique-material.scss",
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "node_modules/@oblique/oblique/styles/css/oblique-core.css",
+              "node_modules/@oblique/oblique/styles/css/oblique-components.css",
               "src/styles.scss"
             ]
           },
