--- a/.github/workflows/rdf-forge-ui.yml
+++ b/.github/workflows/rdf-forge-ui.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Run linting
         run: npm run lint
 
-  test:
-    name: Test
+  unit-test:
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -50,12 +50,51 @@ jobs:
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
       - name: Run tests with coverage
-        run: npm run test -- --no-watch --code-coverage --browsers=ChromeHeadless
+        run: npm run test:ci
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: rdf-forge/rdf-forge-ui/coverage/
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          directory: rdf-forge/rdf-forge-ui/coverage/
+          fail_ci_if_error: false
+          verbose: true
+
+  e2e-test:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: rdf-forge/rdf-forge-ui/package-lock.json
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
+      - name: Run E2E tests
+        run: npm run e2e -- --project=chromium
+      - name: Upload Playwright report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: rdf-forge/rdf-forge-ui/playwright-report/
+          retention-days: 30
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-results
+          path: rdf-forge/rdf-forge-ui/playwright-results.xml
+          retention-days: 30
 
   build:
     name: Build
@@ -82,7 +121,7 @@ jobs:
   docker:
     name: Docker
     runs-on: ubuntu-latest
-    needs: [test, build]
+    needs: [unit-test, e2e-test, build]
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Check out code
