--- a/rdf-forge/rdf-forge-ui/package.json
+++ b/rdf-forge/rdf-forge-ui/package.json
@@ -7,7 +7,12 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadless --code-coverage",
+    "lint": "ng lint",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:report": "playwright show-report",
+    "e2e:codegen": "playwright codegen http://localhost:4200"
   },
   "prettier": {
     "printWidth": 100,
@@ -56,6 +61,7 @@
     "@angular/cli": "^21.0.1",
     "@angular/compiler-cli": "^21.0.0",
     "@eslint/js": "^9.39.1",
+    "@playwright/test": "^1.49.0",
     "@types/jasmine": "^5.1.13",
     "angular-eslint": "^21.0.1",
     "eslint": "^9.39.1",
