Add demo materials and fix Docker build configuration
- Create demo_material folder with comprehensive test materials
- Add CSV data files: energy consumption, museum visits, transport usage
- Add SHACL shape files for validation testing
- Add sample RDF/Turtle files including invalid data for testing
- Add pipeline configuration examples
- Add comprehensive README with testing instructions
- Fix Dockerfile to include rdf-forge-auth-service module
- Update npm package-lock.json to sync dependencies

--- a/rdf-forge/Dockerfile
+++ b/rdf-forge/Dockerfile
@@ -12,6 +12,7 @@ COPY rdf-forge-data-service/pom.xml rdf-forge-data-service/
 COPY rdf-forge-dimension-service/pom.xml rdf-forge-dimension-service/
 COPY rdf-forge-triplestore-service/pom.xml rdf-forge-triplestore-service/
 COPY rdf-forge-gateway/pom.xml rdf-forge-gateway/
+COPY rdf-forge-auth-service/pom.xml rdf-forge-auth-service/
 COPY rdf-forge-cli/pom.xml rdf-forge-cli/
 
 # 2. Download dependencies (this layer will be cached unless POMs change)
@@ -27,6 +28,7 @@ COPY rdf-forge-data-service/src rdf-forge-data-service/src
 COPY rdf-forge-dimension-service/src rdf-forge-dimension-service/src
 COPY rdf-forge-triplestore-service/src rdf-forge-triplestore-service/src
 COPY rdf-forge-gateway/src rdf-forge-gateway/src
+COPY rdf-forge-auth-service/src rdf-forge-auth-service/src
 COPY rdf-forge-cli/src rdf-forge-cli/src
 
 # 4. Build all modules
