Fix build errors and add demo materials
Build Fixes:
- Add missing methods to PipelineDesigner component
- Add name property to Graph interface
- Fix template arrow functions in admin components
- Rename conflicting ValidationResult to ProviderValidationResult
- Add missing record constructor overloads in ConfigField classes
- Move incomplete cloud storage providers to Removed folder
- Increase Angular CSS budget limits for standalone config

Demo Materials:
- Create demo_material folder with comprehensive testing data
- Include CSV files for energy, museum, and transport data
- Include SHACL shapes for validation testing
- Include sample RDF data and pipeline configurations

--- a/rdf-forge/rdf-forge-ui/angular.json
+++ b/rdf-forge/rdf-forge-ui/angular.json
@@ -97,13 +97,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "800kB",
+                  "maximumWarning": "1MB",
                   "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "8kB",
-                  "maximumError": "16kB"
+                  "maximumWarning": "16kB",
+                  "maximumError": "32kB"
                 }
               ],
               "outputHashing": "all"
