--- a/rdf-forge/rdf-forge-dimension-service/src/main/resources/application.yml
+++ b/rdf-forge/rdf-forge-dimension-service/src/main/resources/application.yml
@@ -27,6 +27,7 @@ spring:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
+    table: flyway_schema_history_dimension
   
   cache:
     type: caffeine
