--- a/rdf-forge/rdf-forge-job-service/src/main/resources/application.yml
+++ b/rdf-forge/rdf-forge-job-service/src/main/resources/application.yml
@@ -13,12 +13,18 @@ spring:
   
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    table: flyway_schema_history_job
   
   data:
     redis:
