--- a/rdf-forge/rdf-forge-pipeline-service/src/main/resources/application.yml
+++ b/rdf-forge/rdf-forge-pipeline-service/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
+    table: flyway_schema_history_pipeline
 
 server:
   port: 8001
