--- a/rdf-forge/rdf-forge-triplestore-service/src/main/resources/application.yml
+++ b/rdf-forge/rdf-forge-triplestore-service/src/main/resources/application.yml
@@ -13,11 +13,17 @@ spring:
   
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    table: flyway_schema_history_triplestore
 
 management:
   endpoints:
