Fix job execution race condition and service connectivity
- Fix race condition in JobService where async job execution started
  before the transaction committed, causing "Job not found" errors
- Use TransactionSynchronizationManager to schedule async execution
  after transaction commit
- Add PIPELINE_SERVICE_URL environment variable to job-service in
  docker-compose.standalone.yml for inter-service communication

--- a/rdf-forge/docker-compose.standalone.yml
+++ b/rdf-forge/docker-compose.standalone.yml
@@ -252,6 +252,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD:-rdfforge}
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: 6379
+      PIPELINE_SERVICE_URL: http://pipeline-service:8080
     depends_on:
       postgres:
         condition: service_healthy
