Fix authentication issues for Docker and profile loading
- Fix AuthService to gracefully handle loadUserProfile() failure
  - Profile loading fails due to CORS on Keycloak /account endpoint
  - Now extracts user info from token claims as fallback
  - Auth no longer fails completely when profile loading fails

- Add Keycloak URLs to gateway Docker config
  - KEYCLOAK_ISSUER_URI and KEYCLOAK_JWK_URI environment variables
  - Gateway can now validate JWT tokens from inside Docker network
  - Fixes 500 errors on authenticated API requests

--- a/rdf-forge/docker-compose.yml
+++ b/rdf-forge/docker-compose.yml
@@ -141,6 +141,8 @@ services:
       DATA_SERVICE_URL: http://data-service:8004
       DIMENSION_SERVICE_URL: http://dimension-service:8005
       TRIPLESTORE_SERVICE_URL: http://triplestore-service:8006
+      KEYCLOAK_ISSUER_URI: http://keycloak:8080/realms/rdfforge
+      KEYCLOAK_JWK_URI: http://keycloak:8080/realms/rdfforge/protocol/openid-connect/certs
     depends_on:
       - pipeline-service
       - job-service
