Add comprehensive platform improvements and testing fixes
Features and Improvements:
- Add cube operations (BuildCubeShape, FetchConstraint, FetchCube, etc.)
- Add validation profiles for OpenDataSwiss and Visualize
- Add cube validation service with constraint support
- Add URI template service for CSVW generation
- Add hierarchy support migration for dimensions
- Add E2E test infrastructure with Playwright

Bug Fixes:
- Fix dimensions is_shared auto-set logic for global dimensions
- Fix health check URLs in system settings component
- Fix inter-service communication URLs in standalone mode
- Fix pipeline name data issue in database

Testing:
- Verified all 7 backend services UP with proper health checks
- Tested search/filter on Pipelines, Jobs, Dimensions pages
- Tested Admin section (Users, Roles, API Tokens, Git Sync, System)
- No console errors during navigation

--- a/rdf-forge/docker-compose.standalone.yml
+++ b/rdf-forge/docker-compose.standalone.yml
@@ -301,11 +301,17 @@ services:
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER:-rdfforge}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD:-rdfforge}
       TRIPLESTORE_GRAPHDB_URL: http://graphdb:7200
+      SHACL_SERVICE_URL: http://shacl-service:8080
+      PIPELINE_SERVICE_URL: http://pipeline-service:8080
     depends_on:
       postgres:
         condition: service_healthy
       graphdb:
         condition: service_healthy
+      shacl-service:
+        condition: service_started
+      pipeline-service:
+        condition: service_started
     networks:
       - rdf-forge-network
 
