feat: Implement a pipeline designer UI with visual editing, operations, and templates, alongside new backend services and engine operations for RDF cube and ETL workflows.

--- a/rdf-forge/docker-compose.standalone.yml
+++ b/rdf-forge/docker-compose.standalone.yml
@@ -244,6 +244,8 @@ services:
       args:
         SERVICE_NAME: rdf-forge-job-service
     container_name: rdf-forge-job-service
+    volumes:
+      - ./demo-data:/app/demo:ro
     environment:
       SERVER_PORT: 8080
       SPRING_PROFILES_ACTIVE: noauth,graphdb
